Fix : N+1 문제 방지